--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,8 +16,13 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  environment: my-env
+  environment:
+    name: my-env
+
   build:
+    env:
+      foo: "bar"
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -35,3 +40,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          echo environment variable: ${{ env.foo }}
+          echo environment variable 2: ${{ env.foo2 }}
