--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,3 +43,4 @@ jobs:
           echo environment variable: ${{ env.foo }}
           echo environment variable 2: ${{ env.foo2 }}
           echo environment variable 2 caps: ${{ env.FOO2 }}
+          echo environment variable 2 vars: ${{ vars.foo2 }}
